RESOLVED FIXED20037
GCC 4.2 build broken due to strict aliasing violation
https://bugs.webkit.org/show_bug.cgi?id=20037
Summary GCC 4.2 build broken due to strict aliasing violation
Cameron Zwarich (cpst)
Reported 2008-07-14 18:08:05 PDT
cc1plus: warnings being treated as errors In file included from /Users/Cameron/WebKit/JavaScriptCore/profiler/ProfileNode.h:32, from /Users/Cameron/WebKit/JavaScriptCore/profiler/Profile.h:29, from /Users/Cameron/WebKit/JavaScriptCore/profiler/TreeProfile.h:29, from /Users/Cameron/WebKit/JavaScriptCore/profiler/TreeProfile.cpp:27: /Users/Cameron/WebKit/JavaScriptCore/profiler/CallIdentifier.h: In static member function ‘static unsigned int WTF::IntHash<KJS::CallIdentifier>::hash(const KJS::CallIdentifier&)’: /Users/Cameron/WebKit/JavaScriptCore/profiler/CallIdentifier.h:73: warning: dereferencing type-punned pointer will break strict-aliasing rules
Attachments
Mark Rowe (bdash)
Comment 1 2008-07-14 19:18:06 PDT
Fixed in r35177.
Note You need to log in before you can comment on or make changes to this bug.