Fix https://bugs.webkit.org/show_bug.cgi?id=20037 Bug 20037: GCC 4.2 build broken due to strict aliasing violation.

Reviewed by Sam Weinig.

* kjs/ustring.cpp:
(KJS::UString::Rep::computeHash): Add a version of computeHash that takes a char* and explicit length.
* kjs/ustring.h:
* profiler/CallIdentifier.h:
(WTF::): Use new version of computeHash that takes a char* and explicit length to avoid unsafe aliasing.

Canonical link: https://commits.webkit.org/27609@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35177 268f45cc-cd09-0410-ab3c-d52691b4dbfc