JavaScriptCore/profiler/CallIdentifier.h
@@ -70,7 +70,7 @@ namespace WTF {
                 key.m_url.rep()->hash(),
                 key.m_lineNumber
             };
-            return KJS::UString::Rep::computeHash(reinterpret_cast<UChar*>(hashCodes), sizeof(hashCodes) / sizeof(UChar));
+            return KJS::UString::Rep::computeHash(reinterpret_cast<char*>(hashCodes), sizeof(hashCodes));
         }
 
         static bool equal(const KJS::CallIdentifier& a, const KJS::CallIdentifier& b) { return a == b; }
